# database-mcp

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/instructions/: python.instructions.md
app/: api.py  auth.py  config.py  db.py  logger.py  main.py  mcp.py
docs/: LOGGING.md
test/: connection_test.py  test_advanced_mcp.py  test_logging.py  test_mcp_auth.py  test_mcp_select.py  test_mcp_tools.py
